@@ -1,6 +1,6 @@
-FROM azul/zulu-openjdk:17-jre-latest
+FROM azul/zulu-openjdk:25-jre-latest
 RUN groupadd -r -g 999 ukulele && useradd -rd /opt/ukulele -g ukulele -u 999 -ms /bin/bash ukulele
 COPY --chown=ukulele:ukulele build/libs/ukulele.jar /opt/ukulele/ukulele.jar
 USER ukulele
 WORKDIR /opt/ukulele/
-ENTRYPOINT ["java", "-jar", "/opt/ukulele/ukulele.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "/opt/ukulele/ukulele.jar"]
